src/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Courier New", Courier, monospace;
}

body {
  background-color: #0e0f0f;
}

header {
  padding: 50px 15px 0px;
}

header h1 {
  color: rgb(255, 255, 255);
  font-size: 48px;
  font-weight: 500;
  text-align: center;
  margin-bottom: 20px;
}

main {
  width: 100%;
  max-width: 960px;
  margin: 0 auto;
}

section {
  padding: 15px;
}

.searchbox {
  display: block;
  width: 100%;
  padding: 15px;

  border: none;
  outline: none;
  background: none;

  background-color: #eee;
  border-radius: 8px;

  color: #53565a;
  font-size: 20px;
  font-weight: 300;

  transition: 0.4s ease-out;
}

.searchbox:focus {
  box-shadow: 0px 0px 8px 3px #4484c4;
}

.results {
  display: flex;
  flex-wrap: wrap;
  margin: 0px -15px;
}

.results .result {
  width: 33.333%;
  min-width: 250px;
  padding: 15px;
  display: flex;
  flex-direction: column;
  cursor: pointer;
}

.results .result img {
  display: block;
  width: 100%;
}

.results .result h3 {
  color: #fff;
  font-size: 20px;
  font-weight: 600;
  padding: 10px;
  background: #0e0f0f;
  flex: 1 1 100%;
  transition: 0.4s ease-out;
}

.results .result:hover h3 {
  background: #fff;
  color: #223343;
}

.popup {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: #0e0f0f;

  overflow-y: scroll;
}

.popup .content {
  display: block;
  width: 100%;
  max-width: 960px;
  margin: 0 auto;
  padding: 25px;

  color: #fff;
}

.popup .content h2 {
  font-size: 28px;
  font-weight: 600;
}
.popup .content h2 span {
  font-weight: 300;
  font-size: 20px;
}

.popup .content .rating {
  margin-bottom: 30px;
}

.popup .content .plot {
  display: flex;
  flex-wrap: wrap;
  margin: 0px -15px 30px;
}

.popup .content .plot img {
  flex: 1 1 50%;
  max-width: 300px;
  padding: 0px 15px;
}

.popup .content .plot p {
  flex: 1 1 50%;
  padding: 15px;
}

.popup .content .close {
  display: inline-block;
  padding: 15px 30px;
  font-size: 18px;
  font-weight: 700;

  background: #4484c4;
  color: #fff;
  border-radius: 8px;
  border: none;
  outline: none;
  appearance: none;
  cursor: pointer;

  transition: 0.4s ease-out;
}

.popup .content .close:hover {
  background: #223343;
}

.top-movies {
  margin-top: 50px;
  overflow-x: scroll;
  white-space: nowrap;
  height: 500px;
  scrollbar-width: thin;
}

.top-movies::-webkit-scrollbar {
  width: 8px;
  background-color: #f5f5f5;
}

.top-movies::-webkit-scrollbar-thumb {
  border-radius: 10px;
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
  background-color: #4caf50;
  overflow-x: scroll;
  overflow-y: hidden;
  white-space: nowrap;
}

.top-movies > div {
  display: inline-block;
  margin-right: 20px;
}
.ratedImg {
  height: 400px;
}

.ratedCard {
  width: 266px;
  overflow: hidden;
}
.ratedRating,
.ratedTitle {
  color: white;
}


.recently-viewed-list {
	
	text-align: center;
  color: white;
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-wrap: nowrap;

}

.ratedImg {
  padding: 10px;
  height: 400px;
  width: 250px;
}

.recently-viewed-card {
  height: 450px;
  width: 300px;
}

.recentText {
  color: white;
}

